--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
 
 <resources>
     <string name="app_name">aaaaa</string>
-    <string name="a">a</string>
+    <string name="a">h</string>
     <string name="space">space</string>
     <string name="backspace">backspace</string>
     <string name="enter">return</string>
